--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit>=1.39
+streamlit>=1.34
 pandas>=2.2
 numpy>=1.26
-plotly>=5.24
-geopandas>=1.0.1
-pyproj>=3.6
-shapely>=2.0
-python-dateutil>=2.9.0.post0
-unidecode>=1.3.8
+plotly>=5.22
+python-dateutil>=2.9
+pyarrow>=15.0
+duckdb>=1.0
